[Fix] Overflow
 There wasn't any overflow; just the server did weird things for some reason. A restart solved everything.

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@ body {
 .type-shadow {
   text-shadow: 1px 1px #505050;
 }
+
+.flex-8 {
+  flex: 8 1 0%;
+}
